modified:   zeiterfassung/src/components/App/App.jsx 	modified:   zeiterfassung/src/components/Content/ProfileCard.jsx 	modified:   zeiterfassung/src/components/Content/content.css

--- a/zeiterfassung/src/components/Content/content.css
+++ b/zeiterfassung/src/components/Content/content.css
@@ -113,7 +113,7 @@ button {
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    position: relative; /* Change from absolute to prevent overlap */
+    position: relative; 
     margin-top: 20px;
     font-size: 1rem;
     transition: background-color 0.3s ease;
