--- a/zeiterfassung/src/components/Header/header.css
+++ b/zeiterfassung/src/components/Header/header.css
@@ -14,7 +14,7 @@
 .header h1 {
   font-size: 1.8rem;
   margin: 0;
-  color: #333;  /* Text color for the title */
+  color: #333; 
 }
 
 /* Container for header actions (like buttons) */
