--- a/zeiterfassung/src/components/Header/header.css
+++ b/zeiterfassung/src/components/Header/header.css
@@ -8,12 +8,13 @@
   border-bottom: 1px solid #ddd;
   position: relative;
   width: 100%;
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 /* Styling for the header title (h1) */
 .header h1 {
   font-size: 1.8rem;
-  margin: 0;
+  margin: 1rem;
   color: #333; 
 }
 
@@ -31,7 +32,7 @@
   position: absolute;
   bottom: 10px;            
   right: 1.5rem;             
-  z-index: 10;             
+  z-index: 10;
   align-items: center;     
 }
 
