modified:   zeiterfassung/src/components/Navigation/navigation.css

--- a/zeiterfassung/src/components/Navigation/navigation.css
+++ b/zeiterfassung/src/components/Navigation/navigation.css
@@ -43,5 +43,5 @@
 
 /* Underline only the text within the active link */
 .nav a.active span {
-  text-decoration: underline;
+  text-decoration: none;
 }
